<resources>
    <string name="app_name">Umbrella</string>
    <string name="settings">Settings</string>
    <string name="zip_code">Zip Code</string>
    <string name="kelvin">Kelvin</string>
    <string name="celcius">Celcius</string>
    <string name="farenheith">Farenheith</string>
    <string name="select_your_scale">Select your scale</string>
    <string name="set_return"><![CDATA[Set & Return]]></string>
    <string name="tomorrow">Tomorrow</string>
    <string name="today">Today</string>
</resources>